--- a/mbdyn/manual/input/beam.tex
+++ b/mbdyn/manual/input/beam.tex
@@ -1255,7 +1255,7 @@ per unit span.
 
 There are no provisions to automatically apply the correction 
 when defining the constitutive law of the section.
-The two-node beam has been reimplemented using a helicoidal interpolation
+The two-node beam has been re-implemented using a helicoidal interpolation
 of the nodal positions and orientations, to improve its capability
 to undergo large displacements and relative rotations.
 It is activated by using the keyword \kw{hbeam2} instead of \kw{beam2}.
