--- a/mbdyn/manual/input/input.tex
+++ b/mbdyn/manual/input/input.tex
@@ -158,7 +158,7 @@ self-explanatory) type enclosed in plain brackets `\texttt{()}'.
 \section*{Remarks}
 The input of the program MBDyn is subject to continuous changes
 at a fast pace, since the code is under development.
-This documentation attempts to give some insight into the logics 
+This documentation attempts to give some insight into the logic 
 that drove its implementation.
 
 While most of the software resulted from a careful design, 
