--- a/mbdyn/manual/input/modal-fem-format.tex
+++ b/mbdyn/manual/input/modal-fem-format.tex
@@ -45,7 +45,7 @@ as detailed in Appendix~\ref{sec:APP:EL:STRUCT:JOINT:MODAL:NASTRAN}
 (in short, it processes binary output from NASTRAN, as defined by means
 of appropriate ALTER files provided with MBDyn sources, into a file
 that is suitable for direct input in MBDyn);
-\item by manually crafting the output of your favourite FEM analysis:
+\item by manually crafting the output of your favorite FEM analysis:
 since it is essentially a plain ASCII file, it can be generated
 in a straightforward manner from analogous results obtained with
 almost any FEM software, from experiments or manually generated
