--- a/mbdyn/manual/input/netcdfout.tex
+++ b/mbdyn/manual/input/netcdfout.tex
@@ -48,7 +48,7 @@ This document does not describe the details of NetCDF low-level format,
 since this is not intended to be accessed directly by MBDyn users.
 Interested readers can consult the specific documentation \cite{NETCDF-UM}.
 
-The output in NetCDF format is a work-in-progress, so it may be sujected
+The output in NetCDF format is a work-in-progress, so it may be subjected
 to changes during the development of MBDyn.
 This chapter is intended to document its current status,
 so it may be incomplete, and occasionally outdated as well.
@@ -459,7 +459,7 @@ If \kw{output eigenvectors} was specified, the following variables are added to 
 \begin{itemize}
 \item \kw{eig.}\bnt{index}\kw{.VR} : contains the right eigenvectors matrix;
 \item \kw{eig.}\bnt{index}\kw{.VL} : contains the left eigenvectors matrix, only
-  written if the choosen method computes it;
+  written if the chosen method computes it;
 \item \kw{eig.}\bnt{index}\kw{.alpha} : contains the \texttt{alpha} matrix, in which
   the first row contains the $\alpha_r$ coefficients, the second row the $\alpha_i$
   coefficients and the third row the $\beta$ coefficients, so that the $k$-th
