--- a/mbdyn/manual/input/nodes.tex
+++ b/mbdyn/manual/input/nodes.tex
@@ -498,7 +498,7 @@ The following data are available:
 \label{sec:NODE:HYDRAULIC}
 The hydraulic node represents the pressure
 at a given location of a hydraulic circuit.
-It is derived from the generic scalar agebraic node; as a consequence,
+It is derived from the generic scalar algebraic node; as a consequence,
 it can be connected to all elements that operate on generic scalar nodes. 
 
 The syntax is
