--- a/mbdyn/manual/input/outputresults.tex
+++ b/mbdyn/manual/input/outputresults.tex
@@ -142,7 +142,7 @@ To check the model during preparation, run MBDyn with
 \begin{verbatim}
     abort after: input;
 \end{verbatim}
-in the \nt{problem\_name} section (pag~\pageref{sec:IVP:abort after}),
+in the \nt{problem\_name} section (page~\pageref{sec:IVP:abort after}),
 so that the model is output in the input configuration,
 and EasyAnim can visualize it.
 
