--- a/mbdyn/manual/input/overview.tex
+++ b/mbdyn/manual/input/overview.tex
@@ -214,7 +214,7 @@ of elements.
 To ease the creation of MBDyn file, two syntax highlighting methods can be used.
 
 The first one is intended to be used with the \htmladdnormallink{Vim}{http://www.vim.org/}
-commandline editor and can be implement by
+command-line editor and can be implement by
 adding the \bnt{mbdyn-directory}\kw{/var/mbd.vim} file to the \kw{\textasciitilde{}/.vim/syntax/} folder.
 
 The second method can be used with the \htmladdnormallink{Geany}{http://www.geany.org/}
