--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,6 +14,7 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added network byte order to drivers & element output streams
 	Backward compatibility issues:
+		- got rid of adams and motionview output 
 	Known issues:
 	Bug fixes:
 		- fixed (harmless?) off-by-one read in fixed step drive
