--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4589,7 +4589,7 @@ the mechanical properties of the component.
 %%% the Jacobian matrix contribution
 
 
-
+\begin{comment}
 \subsection{Kinematic}
 This joint will eventually evolve into a connection with external programs
 that impose the entire motion of a node; at present, you can use it
@@ -4608,6 +4608,7 @@ This element is superseded by the
 \hyperref{\kw{total pin joint}}{\kw{total pin joint}, see Section~}{}{sec:EL:STRUCT:JOINT:TOTAL_PIN_JOINT}.
 
 Note: this element is eXperimental.
+\end{comment}
 
 \subsection{Linear acceleration}
 This joint imposes the absolute linear acceleration of a node
