--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -21,6 +21,7 @@ MBDyn 1.X-Devel
 	Bug fixes:
 		- fixed (harmless?) off-by-one read in fixed step drive
 		- fixed bugs in timestep control (Reinhard Resch)
+		- fixed default max time step (Reinard Resch)
 
 MBDyn 1.7.2
 	Enhancements:
