--- a/mbdyn/manual/input/logfile.tex
+++ b/mbdyn/manual/input/logfile.tex
@@ -53,6 +53,22 @@ by a blank in the first column.
 \section{Model Description Entries}
 Some of the keywords mark model entities, described in the following.
 
+\subsection{acceleration, velocity}
+The \kw{angular acceleration}, the \kw{linear acceleration} 
+the \kw{angular velocity} and the \kw{linear velocity} joints.
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{joint_type}: \bnt{label}
+        \bnt{node_label} (\hty{Vec3}) \bnt{relative_direction}
+    \bnt{joint_type} ::=
+    	\{ \kw{angularacceleration} | \kw{linearacceleration} | \kw{angularvelocity} |
+	\kw{linearvelocity} \}
+\end{Verbatim}
+%\end{verbatim}
+The \nt{relative direction} vectors indicate the (not normalized) axis of the imposed
+acceleration/velocity.
+All data are on one line, without continuation.
+
 \subsection{aero0}
 The \kw{aerodynamic body}.
 %\begin{verbatim}
@@ -153,22 +169,6 @@ The \nt{x\_cg} vector indicates the location of the center of mass with respect 
 the reference frame of the respective node. The \nt{J} matrix is the inertia
 matrix.
 
-\subsection{acceleration, velocity}
-The \kw{angular acceleration}, the \kw{linear acceleration} 
-the \kw{angular velocity} and the \kw{linear velocity} joints.
-%\begin{verbatim}
-\begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{joint_type}: \bnt{label}
-        \bnt{node_label} (\hty{Vec3}) \bnt{relative_direction}
-    \bnt{joint_type} ::=
-    	\{ \kw{angularacceleration} | \kw{linearacceleration} | \kw{angularvelocity} |
-	\kw{linearvelocity} \}
-\end{Verbatim}
-%\end{verbatim}
-The \nt{relative direction} vectors indicate the (not normalized) axis of the imposed
-acceleration/velocity.
-All data are on one line, without continuation.
-
 \subsection{beam slider}
 The \kw{beam slider} joint.
 %\begin{verbatim}
@@ -267,7 +267,7 @@ The \kw{drive displacement} joint
 %\end{verbatim}
 All data in one line, without continuation.
 
-\subsection{drive displacement}
+\subsection{drive displacement pin}
 The \kw{drive displacement pin} joint
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
@@ -477,6 +477,63 @@ are given.
 When \nt{orientation} is any of \kw{euler*} parametrizations,
 the angles are in degrees.
 
+\subsection{total joint}
+The \kw{total} joint
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \kw{total joint}: \bnt{label}
+        \bnt{node_1_label} 
+	(\hty{Vec3}) \bnt{relative_offset_1}
+	(\hty{Mat3x3}) \bnt{rel_pos_orientation_1}
+	(\hty{Mat3x3}) \bnt{rel_rot_orientation_1}
+        \bnt{node_2_label} 
+	(\hty{Vec3}) \bnt{relative_offset_2}
+	(\hty{Mat3x3}) \bnt{rel_pos_orientation_2}
+	(\hty{Mat3x3}) \bnt{rel_rot_orientation_2}
+	(\hty{bool}) \bnt{position_status_1}
+	(\hty{bool}) \bnt{position_status_2}
+	(\hty{bool}) \bnt{position_status_3}
+	(\hty{bool}) \bnt{velocity_status_1}
+	(\hty{bool}) \bnt{velocity_status_2}
+	(\hty{bool}) \bnt{velocity_status_3}
+	(\hty{bool}) \bnt{orientation_status_1}
+	(\hty{bool}) \bnt{orientation_status_2}
+	(\hty{bool}) \bnt{orientation_status_3}
+	(\hty{bool}) \bnt{angular_velocity_status_1}
+	(\hty{bool}) \bnt{angular_velocity_status_2}
+	(\hty{bool}) \bnt{angular_velocity_status_3}
+\end{Verbatim}
+%\end{verbatim}
+All data on one line, without continuation.
+
+\subsection{total pin joint}
+The \kw{total pin} joint
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+    \kw{total joint}: \bnt{label}
+        \bnt{node_label} 
+	(\hty{Vec3}) \bnt{relative_offset}
+	(\hty{Mat3x3}) \bnt{rel_pos_orientation}
+	(\hty{Mat3x3}) \bnt{rel_rot_orientation}
+	(\hty{Vec3}) \bnt{absolute_position}
+	(\hty{Mat3x3}) \bnt{abs_pos_orientation}
+	(\hty{Mat3x3}) \bnt{abs_rot_orientation}
+	(\hty{bool}) \bnt{position_status_1}
+	(\hty{bool}) \bnt{position_status_2}
+	(\hty{bool}) \bnt{position_status_3}
+	(\hty{bool}) \bnt{velocity_status_1}
+	(\hty{bool}) \bnt{velocity_status_2}
+	(\hty{bool}) \bnt{velocity_status_3}
+	(\hty{bool}) \bnt{orientation_status_1}
+	(\hty{bool}) \bnt{orientation_status_2}
+	(\hty{bool}) \bnt{orientation_status_3}
+	(\hty{bool}) \bnt{angular_velocity_status_1}
+	(\hty{bool}) \bnt{angular_velocity_status_2}
+	(\hty{bool}) \bnt{angular_velocity_status_3}
+\end{Verbatim}
+%\end{verbatim}
+All data on one line, without continuation.
+
 \subsection{universal hinge}
 The \kw{universal hinge} joint
 %\begin{verbatim}
@@ -592,4 +649,126 @@ The list of structural nodes labels (excluding dummy nodes).
 \kw{struct node label}: \bnt{label} [...]
 \end{Verbatim}
 %\end{verbatim}
+
+
+\section{Output Elements}
+
+\subsection{RTAI stream output}
+The \kw{stream output} element in case an RTAI mailbox is used:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+\kw{outputelement}: \bnt{label}
+	stream
+	\kw{RTAI}
+	(\hty{string}) \bnt{stream_name}
+        (\hty{string}) \bnt{host}
+	(\hty{string}) \bnt{name}
+	(\hty{bool}) \bnt{create}
+	\{ values | motion \}
+	\bnt{content}
+\end{Verbatim}
+%\end{verbatim}
+The \nt{create} flag can take 1 or 0 value. The \nt{content} formatting
+is specified in section~\ref{sec:APP:LOGFILE:OUTPUT_ELEMENTS:CONTENT}.
+All data in one line, without continuation.
+
+\subsection{INET socket stream output}
+the \kw{stream output} element in case an INET socket is used:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+\kw{outputelement}: \bnt{label}
+	stream
+	\kw{INET}
+	(\hty{string}) \bnt{stream_name}
+        (\hty{string}) \bnt{host}
+	(\hty{integer}) \bnt{port}
+	\{ tcp | udp \}
+	(\hty{bool}) \bnt{create}
+	(\hty{bool}) \bnt{signal}
+	(\hty{bool}) \bnt{blocking}
+	(\hty{bool}) \bnt{send_first}
+	(\hty{bool}) \bnt{abort_if_broken}
+	(\hty{integer}) \bnt{output_frequency}
+	\{ values | motion \}
+	\bnt{content}
+\end{Verbatim}
+%\end{verbatim}
+The \nt{content} formatting
+is specified in section~\ref{sec:APP:LOGFILE:OUTPUT_ELEMENTS:CONTENT}.
+All data in one line, without continuation.
+
+\subsection{local socket stream output}
+the \kw{stream output} element in case an local socket is used:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+\kw{outputelement}: \bnt{label}
+	stream
+	\kw{UNIX}
+        (\hty{string}) \bnt{path}
+	\{ tcp | udp \}
+	(\hty{string}) \bnt{stream_name}
+	(\hty{bool}) \bnt{create}
+	(\hty{bool}) \bnt{signal}
+	(\hty{bool}) \bnt{blocking}
+	(\hty{bool}) \bnt{send_first}
+	(\hty{bool}) \bnt{abort_if_broken}
+	(\hty{integer}) \bnt{output_frequency}
+	\{ values | motion \}
+	\bnt{content}
+\end{Verbatim}
+%\end{verbatim}
+The \nt{content} formatting is specified in 
+section~\ref{sec:app:logfile:output_elements:content}.
+All data in one line, without continuation.
+
+\subsection{output element content}\label{sec:APP:LOGFILE:OUTPUT_ELEMENTS:CONTENT}
+The \nt{content} of a stream output element. In case of output of type
+\kw{values}
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+  \bnt{content}::
+  	\bnt{values} (\hty{integer}) \bnt{num_channels}
+\end{Verbatim}
+While in case of output of type \kw{motion}
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+  \bnt{content}::
+  	\bnt{motion} 
+        (\hty{integer}) \bnt{num_nodes}
+	(\hty{bool}) \bnt{position_output_flag} 
+	(\hty{bool}) \bnt{orientation_matrix_output_flag} 
+	(\hty{bool}) \bnt{orientation_matrix_transpose_output_flag} 
+	(\hty{bool}) \bnt{velocity_output_flag} 
+	(\hty{bool}) \bnt{angular_velocity_output_flag} 
+\end{Verbatim}
+All data in one line, without continuation.
+%\end{verbatim}
+
+\section{File drivers}
+
+\subsection{INET socket stream file drifer}
+The \kw{stream} file driver in case an INET socket is used:
+%\begin{verbatim}
+\begin{Verbatim}[commandchars=\\\{\}]
+\kw{filedriver}: 
+	\bnt{label}
+	stream 
+	\kw{INET}
+	(\hty{string}) \bnt{stream_name}
+        (\hty{string}) \bnt{host}
+	(\hty{integer}) \bnt{port}
+	\{ tcp | udp \}
+	(\hty{bool}) \bnt{create}
+	(\hty{bool}) \bnt{signal}
+	(\hty{bool}) \bnt{blocking}
+	(\hty{integer}) \bnt{input_frequency}
+	(\hty{bool}) \bnt{receive_first}
+	(\hty{real}) \bnt{timeout}
+	(\hty{integer}) \bnt{columns_number}
+	(\hty{real}) \bnt{initial_value_1}
+	(\hty{real}) \bnt{initial_value_2}
+	[\ldots]
+\end{Verbatim}
+%\end{verbatim}
+
 
