--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -24,6 +24,7 @@ MBDyn 1.X-Devel
 		- fixed bugs in timestep control (Reinhard Resch)
 		- fixed default max time step (Reinard Resch)
 		- fixed build without libmbc (noted by Richard Crozier)
+		- fixed test if residual is NaN (Reinard Resch)
 
 MBDyn 1.7.2
 	Enhancements:
