--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -25,6 +25,7 @@ MBDyn 1.X-Devel
 		- fixed default max time step (Reinard Resch)
 		- fixed build without libmbc (noted by Richard Crozier)
 		- fixed test if residual is NaN (Reinard Resch)
+		- fixed error message in strext (Richard Crozier)
 
 MBDyn 1.7.2
 	Enhancements:
